--- a/sections/404.liquid
+++ b/sections/404.liquid
@@ -11,7 +11,7 @@
     {% endif %}
     <a
       href="{{ shop_url }}"
-      class="px-4 inline py-2 text-base font-medium shadow bg-blue-600 hover:bg-blue-800 text-white"
+      class="px-4 inline py-2 text-base font-medium shadow bg-black text-white hover:bg-white hover:text-black"
     >
       {{- section.settings.button_label -}}
     </a>
