--- a/sections/404.liquid
+++ b/sections/404.liquid
@@ -1,28 +1,28 @@
-<div class="max-w-md">
-  <div class="text-5xl font-bold my-4">{{ section.settings.title }}</div>
-  <div class="my-4">
-    <p class="text-base md:text-xl leading-normal">{{ section.settings.subtext_title }}</p>
+<section class="flex items-center justify-center text-center py-7 h-screen">
+  <div class="max-w-md">
+    <div class="text-5xl font-bold my-4">{{ section.settings.title }}</div>
+    <div class="my-4">
+      <p class="text-base md:text-xl leading-normal">{{ section.settings.subtext_title }}</p>
+    </div>
+    <div class="my-4">
+      {% if section.settings.button_url == blank %}
+        {% assign shop_url = shop.secure_url %}
+      {% else %}
+        {% assign shop_url = section.settings.button_url %}
+      {% endif %}
+      <a
+        href="{{ shop_url }}"
+        class="px-4 inline py-2 text-base font-medium shadow bg-black text-white hover:bg-white hover:text-black"
+      >
+        {{- section.settings.button_label -}}
+      </a>
+    </div>
   </div>
-  <div class="my-4">
-    {% if section.settings.button_url == blank %}
-      {% assign shop_url = shop.secure_url %}
-    {% else %}
-      {% assign shop_url = section.settings.button_url %}
-    {% endif %}
-    <a
-      href="{{ shop_url }}"
-      class="px-4 inline py-2 text-base font-medium shadow bg-black text-white hover:bg-white hover:text-black"
-    >
-      {{- section.settings.button_label -}}
-    </a>
-  </div>
-</div>
+</section>
 
 {% schema %}
 {
-  "name": "Template 404",
-  "tag": "section",
-  "class": "flex items-center justify-center text-center py-7 h-screen",
+  "name": "404",
   "settings": [
     {
       "type": "text",
