--- a/sections/article.liquid
+++ b/sections/article.liquid
@@ -79,6 +79,7 @@
       "author": {
           "@type": "Person",
           "name": {{ article.author | json }}
+          "url": {{ article.url | json }}
       },
       "publisher": {
           "@type": "Organization",
@@ -89,7 +90,7 @@
 
 {% schema %}
 {
-  "name": "Template Article",
+  "name": "Article",
   "settings": [
     {
       "type": "checkbox",
