--- a/sections/navbar.liquid
+++ b/sections/navbar.liquid
@@ -1,7 +1,7 @@
 <div class="relative bg-white" x-data="{ mobileMenuOpen: false, searchBarOpen: false }" x-cloak>
   <div class="mx-auto px-4 sm:px-6">
-    <div class="flex justify-around items-center py-6 md:justify-start md:space-x-10">
-      <div class="flex justify-start lg:flex-1 truncate">
+    <div class="flex justify-around items-center py-6 md:space-x-10">
+      <div class="flex justify-start truncate">
         <h1 class="text-xl font-bold truncate">{{ shop.name }}</h1>
       </div>
 
@@ -21,7 +21,7 @@
       </nav>
 
       <!-- CART BUTTON / ACCOUNT LINKS IF ENABLED -->
-      <div class="hidden md:flex items-center justify-end md:flex-1 space-x-5 gap-4">
+      <div class="hidden md:flex items-center justify-end space-x-5 gap-4">
         <button
           x-on:click="searchBarOpen = true"
           type="button"
@@ -82,27 +82,6 @@
           </div>
         </div>
       </div>
-    </div>
-  </div>
-
-  <div x-show="searchBarOpen" class="w-full absolute top-0 bg-white border">
-    <button type="button" x-on:click="searchBarOpen = false" class="absolute top-0 right-0 mr-5 mt-5 text-gray-500">
-      {% render 'icon-close' %}
-    </button>
-    <div class="h-40 flex justify-center items-center">
-      <form action="{{ routes.search_url }}" method="get" class="flex-auto">
-        <div class="relative text-gray-500 px-10 border">
-          <input
-            type="search"
-            name="q"
-            placeholder="Search"
-            class="w-full bg-white h-10 px-5 pr-10 rounded-full text-sm focus:outline-none"
-          >
-          <button type="submit" class="absolute right-0 top-0 mt-2 mr-2 md:mr-20">
-            {% render 'icon-search' %}
-          </button>
-        </div>
-      </form>
     </div>
   </div>
 </div>
