--- a/snippets/navigation-link.liquid
+++ b/snippets/navigation-link.liquid
@@ -13,17 +13,21 @@
       <button
         x-on:click="{{ mobile_link_handle }} = ! {{ mobile_link_handle }}"
         type="button"
-        class="text-base text-gray-500 hover:text-gray-900 flex items-center justify-between w-full gap-4"
+        class="text-base text-gray-500 hover:text-gray-900 flex items-center justify-between w-full gap-0"
       >
         <div>{{ link.title }}</div>
         {% render 'icon-dropdown' %}
       </button>
 
-      <div x-show="{{ mobile_link_handle }}" class="grid gap-y-7 py-3">
+      <div
+        x-show="{{ mobile_link_handle }}"
+        @click.away="{{ mobile_link_handle }}= false"
+        class="grid gap-y-7 py-3 md:py-0"
+      >
         {% for childlink in link.links %}
           <a
             href="{{ childlink.url }}"
-            class="-m-3 p-3 mt-2 flex items-center rounded-md text-gray-500 hover:text-gray-900 hover:bg-gray-50"
+            class="md:absolute shadow-lg -m-3 p-3 mt-2 md:m-0 min-w-50 flex items-center rounded-md text-gray-500 hover:text-gray-900 hover:bg-gray-50"
           >
             <span class="ml-3 text-base font-medium text-gray-500">{{ childlink.title }}</span>
           </a>
