--- a/sections/navbar.liquid
+++ b/sections/navbar.liquid
@@ -17,7 +17,7 @@
 
       <!-- NAVIGATION MENU -->
       <nav class="hidden md:flex space-x-10 md:gap-4 ">
-        {% render 'navigation-link' %}
+        {% render 'navigation-links' %}
       </nav>
 
       <!-- CART BUTTON / ACCOUNT LINKS IF ENABLED -->
@@ -76,7 +76,7 @@
             <!-- NAVIGATION LINKS FOR MOBILE MENU -->
             <div class="pt-3">
               <nav class="grid gap-y-7">
-                {% render 'navigation-link' %}
+                {% render 'navigation-links' %}
               </nav>
             </div>
           </div>
