--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -18,6 +18,9 @@
     {{ 'theme.css' | asset_url | stylesheet_tag }}
 
     <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.8.2/dist/alpine.min.js" defer></script>
+
+    <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css">
+    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
   </head>
   <body>
     {% section 'navbar' %}
