--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -1,5 +1,5 @@
 <header class="max-w-6xl mx-6 p-6">
-  <div class="grid grid-cols-1 md:grid-cols-2 gap-6 items-center">
+  <div class="grid grid-cols-1 md:grid-cols-2 gap-6 items-center md:justify-between">
     <div>
       <h1 class="text-4xl font-bold text-gray-900">{{ section.settings.main_title }}</h1>
       <p class="mt-4 text-gray-600">
@@ -7,7 +7,7 @@
       </p>
     </div>
     <div>
-      {% render 'basket' %}
+      {% render 'deer-image' %}
     </div>
   </div>
 </header>
